--- a/reservation-demo/pom.xml
+++ b/reservation-demo/pom.xml
@@ -10,7 +10,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.rindus.reservationdemo</groupId>
-  <artifactId>reservationdemoweb</artifactId>
+  <artifactId>rindusMicroservices</artifactId>
   <version>1.0.0.BUILD-SNAPSHOT</version>
   <name>ReservationDemo</name>
 
